tests/baselines/reference/unusedMultipleParameter1InContructor.errors.txt
tests/cases/compiler/unusedMultipleParameter1InContructor.ts(3,17): error TS6133: Parameter 'person' has never been used.
tests/cases/compiler/unusedMultipleParameter1InContructor.ts(4,13): error TS6132: Variable 'unused' has never been used.


==== tests/cases/compiler/unusedMultipleParameter1InContructor.ts (2 errors) ====
    
    class Dummy {
        constructor(person: string, person2: string) {
                    ~~~~~~~~~~~~~~
!!! error TS6133: Parameter 'person' has never been used.
            var unused = 20;
                ~~~~~~
!!! error TS6132: Variable 'unused' has never been used.
            person2 = "Dummy value";
        }
    }